# xorshift_test

./: CMakeLists.txt
include/: xorshift.hpp
test/: bits.cpp
